[package]
name = "pilot_sys"
version = "0.1.0"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2018"
repository = "https://gitlab.com/pilot-automation/nexus/pilot_sys"

[dependencies]
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
