[package]
name = "pilot_sys"
version = "0.3.2"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2021"
repository = "https://github.com/pilotnexus/pilot_sys.git"

[dependencies]
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
