[package]
name = "pilot_sys"
version = "0.3.4"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2021"
repository = "https://github.com/pilotnexus/pilot_sys.git"

[dependencies]
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }

[dependencies.num-traits]
version = "0.2"
default-features = false